# VERITY

./: .env.example  .gitignore  CHANGELOG.md  DEMO_RESULTS.md  LICENSE  README.md  pyproject.toml  pytest_output.txt  test_full_certification.py  test_sota_attacks.py
aegis/: __init__.py
aegis/api/routes/: attacks.py  auth.py  campaigns.py  reports.py
aegis/compliance/: eu_ai_act.py  models.py  owasp.py
docs/: API.md  ARCHITECTURE.md  ATTACKS.md  INSTALLATION.md  README.md  USAGE.md
registry/: VERITY_registry.json  aegis_registry.json
reports_real/: VERITY_certificate_20251221_222223.sig.json  VERITY_report_20251221_222223.html  VERITY_report_20251221_222223.json  VERITY_report_20251221_222223.md  aegis_certificate_20251221_214204.sig.json  aegis_report_20251221_214204.html  aegis_report_20251221_214204.json  aegis_report_20251221_214204.md
tests/: conftest.py  test_compliance.py  test_judges.py  test_providers.py  test_red_team.py  test_reporting.py
verity/: __init__.py  cli.py
verity/api/: __init__.py  database.py  main.py  models.py  proxy.py  redis_client.py
verity/api/routes/: __init__.py  attacks.py  auth.py  campaigns.py  health.py  reports.py
verity/compliance/: __init__.py  eu_ai_act.py  models.py  owasp.py
verity/config/: __init__.py  logging.py  settings.py
verity/core/: __init__.py
verity/core/providers/: __init__.py  anthropic.py  base.py  factory.py  (+3 more)
verity/judges/: __init__.py  llm_judge.py
verity/red_team/: __init__.py  base_agent.py  orchestrator.py
verity/registry/: __init__.py  ledger.py
verity/reporting/: __init__.py  report_generator.py
verity/templates/: report_html.j2  report_markdown.j2
(+7 files in other folders)
