[project]
name = "verity"
version = "0.1.0"
description = "VERITY - Verification of Ethics, Resilience & Integrity for Trusted AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Giuseppe Spicchiarello" }
]
keywords = ["llm", "red-teaming", "security", "ai-safety", "jailbreak", "prompt-injection", "certification"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "ollama>=0.4.0",
    "openai>=1.57.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
sandbox = [
    "e2b>=1.0.0",
]
marl = [
    "stable-baselines3>=2.4.0",
    "gymnasium>=1.0.0",
]

[project.scripts]
verity = "verity.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
